--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
     <div class="main-border">
       <div class="main-img">
-        <img class="main-img" src="img/Screenshot .jpg" alt="" />
+        <img class="main-img" src="img/Screenshot.png" alt="" />
       </div>
       <div class="home-button">
         <a href="menu.html">
@@ -11,47 +18,6 @@
         </a>
       </div>
     </div>
-  </body>
-</html>
-<style>
-  * {
-    box-sizing: border-box;
-  }
 
-  .main-border {
-    width: 390px;
-    height: 824px;
-    background: rgba(255, 255, 255, 1);
-    opacity: 1;
-    position: relative;
-    top: 0px;
-    border: 1px solid #000; /* ايطار*/
-    left: 0px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    overflow: hidden;
-  }
-  .btn {
-    padding: 15px 32px;
-    color: rgb(246, 248, 248);
-    background-color: rgb(74, 149, 155);
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    border-radius: 10px;
-  }
-  .btn:active {
-    background-color: rgb(98, 177, 181);
-  }
-  .home-button {
-    margin-left: 120px;
-    margin-top: 120px;
-  }
-  .main-img {
-    display: ruby-base-container;
-    margin: 40 45 44 44 auto;
-    margin-left: 4%;
-    width: 320px;
-  }
-</style>
+</body>
+</html>
