--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Document</title>
 </head>
 <body>
+  <section class="desktop">
+    <div class="img-barcode">
+      <img src="img/Screenshot.png" alt="" width="200px">
+    </div>
+    <div class="title-desktop">
+      ادخل من الجوال ياجميل
+    </div>
+  </section>
     <div class="main-border">
       <div class="main-img">
         <img class="main-img" src="img/Screenshot.png" alt="" />
