--- a/html/menu.html
+++ b/html/menu.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style/menu.css">
+  <link rel="stylesheet" href="/style/menu.css">
   <title>خيارات الدخول</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
   </section>
   <section id="menu">
     <div class="logo">
-      <img src="img/Screenshot.png" alt="" width="200px">
+      <img src="/img/Screenshot.png" alt="" width="200px">
     </div>
     <div class="option">
       <h1>خيارات الدخول</h1>
