--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         <img class="main-img" src="img/Screenshot.png" alt="" />
       </div>
       <div class="home-button">
-        <a href="menu.html">
-          <button class="btn">! ابدأ الأن</button>
-        </a>
+          <a href="html/menu.html"><button class="btn">! ابدأ الأن</button></a>
       </div>
     </div>
 
