Co-authored-by: Alanoud35 <Alanoud35@users.noreply.github.com>

--- a/html/menu.html
+++ b/html/menu.html
@@ -32,7 +32,7 @@
           <input type="button" value="المالك">
         </div>
         <div class="guest select">
-          <input type="button" value="زائر">
+          <a href="optionsVisitor.html"><input type="button" value="زائر"></a>
         </div>
       </div>
     </div>
@@ -41,8 +41,8 @@
         <div class="line"><span class="title">او وزونا عبر</span></div>
       </div>
       <div class="icons">
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://twitter.com/CCIS_IMAMU?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa-brands fa-twitter"></i></a>
+        <a href="us.html"><i class="fa-brands fa-instagram"></i></a>
         <a href="#"><i class="fa-solid fa-envelope"></i></a>
       </div>
     </div>
