--- a/html/us.html
+++ b/html/us.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <div class="v159_420">
-      <div class="v159_421"></div>
-      <div class="name"></div>
-      <span class="v159_426">Login </span><span class="v159_427">Login </span>
-      <div class="v159_474"></div>
-      <div class="v159_688"></div>
-      <span class="v159_689">من نكون ؟</span
-      ><span class="v159_690"
-        >مشكات موقع من إنشاء طالبات جامعة الامام يهدف الى تسهيل وصولك الى مكتب
-        الاستاذ بأمتع وأسهل الطرق نتمنى لك تجربة ممتعه !🤍</span
-      >
-    </div>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div class="page">
+    <span class="us">من نكون ؟</span>
+    <span class="desc"
+     >مشكاة موقع من إنشاء طالبات جامعة الامام يهدف الى تسهيل وصولك الى مكتب
+           الاستاذ بأمتع وأسهل الطرق
+      </span>
+      <span class="desc2">
+       ! نتمنى لك تجربة ممتعة
+      </span>
+   <img class="main-img" src="/img/Screenshot .jpg" alt="" />
+
+ </div>
+</body>
 </html>
 <br /><br />
 <style>
@@ -23,84 +29,29 @@
   body {
     font-size: 14px;
   }
-  .v159_420 {
+  .main-img{
+    display: ruby-base-container;
+  margin: 45 55 44 44 auto;
+  margin-left: 15%;
+  margin-top:7%;
+  width:250px
+  }
+  .page {
     width: 390px;
     height: 844px;
-    background: rgba(255, 255, 255, 1);
-    opacity: 1;
+    background: rgb(253, 251, 251);
+     opacity: 1;
     position: absolute;
     top: 0px;
     left: 0px;
     overflow: hidden;
   }
-  .v159_421 {
-    width: 390px;
-    height: 212px;
-    background: rgba(67, 150, 156, 1);
-    opacity: 0.30000001192092896;
-    position: absolute;
-    top: 632px;
-    left: 0px;
-    border: 0px solid rgba(0, 0, 0, 1);
-  }
-  .name {
-    color: #fff;
-  }
-  .v159_426 {
-    width: 62px;
-    color: rgba(255, 255, 255, 1);
-    position: absolute;
-    top: 542px;
-    left: 156px;
-    font-family: Outfit;
-    font-weight: Bold;
-    font-size: 24px;
-    opacity: 1;
-    text-align: left;
-  }
-  .v159_427 {
-    width: 62px;
-    color: rgba(255, 255, 255, 1);
-    position: absolute;
-    top: 542px;
-    left: 156px;
-    font-family: Outfit;
-    font-weight: Bold;
-    font-size: 24px;
-    opacity: 1;
-    text-align: left;
-  }
-  .v159_474 {
-    width: 68px;
-    height: 36px;
-    background: url("../images/v159_474.png");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    opacity: 1;
-    position: absolute;
-    top: 26px;
-    left: 11px;
-    overflow: hidden;
-  }
-  .v159_688 {
-    width: 143px;
-    height: 252px;
-    background: url("../images/v159_688.png");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    opacity: 1;
-    position: absolute;
-    top: 93px;
-    left: 123px;
-    overflow: hidden;
-  }
-  .v159_689 {
+    
+  .us {
     width: 242px;
     color: rgba(70, 147, 153, 1);
     position: absolute;
-    top: 414px;
+    top: 504px;
     left: 122px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-family: Outfit;
@@ -109,11 +60,23 @@
     opacity: 1;
     text-align: left;
   }
-  .v159_690 {
+  .desc {
     width: 387px;
-    color: rgba(0, 0, 0, 1);
+    color: rgb(69, 66, 66);
     position: absolute;
-    top: 488px;
+    top: 590px;
+    left: 4px;
+    font-family: Outfit;
+    font-weight: Medium;
+    font-size: 24px;
+    opacity: 1;
+    text-align: center;
+  }
+  .desc2{
+    width: 387px;
+    color: rgb(69, 66, 66);
+    position: absolute;
+    top: 740px;
     left: 4px;
     font-family: Outfit;
     font-weight: Medium;
