--- a/html/menu.html
+++ b/html/menu.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="/style/menu.css">
+  <link rel="stylesheet" href="../style/menu.css">
   <title>خيارات الدخول</title>
 </head>
 <body>
@@ -29,16 +29,21 @@
       <h1>خيارات الدخول</h1>
       <div class="input-button">
         <div class="owner select">
-          <input type="button" value="المالك">
+          <a href="login.html">
+
+            <input type="button" value="المالك">
+          </a>
         </div>
         <div class="guest select">
-          <a href="optionsVisitor.html"><input type="button" value="زائر"></a>
+          <a href="who.html">
+            <input type="button" value="زائر">
+          </a>
         </div>
       </div>
     </div>
     <div class="social">
       <div class="social-title">
-        <div class="line"><span class="title">او وزونا عبر</span></div>
+        <div class="line"><span class="title">او زورونا عبر</span></div>
       </div>
       <div class="icons">
         <a href="https://twitter.com/CCIS_IMAMU?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa-brands fa-twitter"></i></a>
