--- a/html/optionsVisitor.html
+++ b/html/optionsVisitor.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style/optionVisitor.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../style/optionsVisitor.css">
   <title>optionsVisitor</title>
 </head>
 <body>
@@ -24,8 +24,7 @@
         <div class="option-one">
           <div class="tooltip">
             <div id="tooltip-text">
-              <div>hello</div>
-            </div>
+             </div>
             <img class="i" src="/img/question-mark.png" alt="" width="50px">
           </div>
           <a href="" class="v1">أرشدني</a>
@@ -33,8 +32,7 @@
         <div class="option-one">
           <div class="tooltip down">
             <div id="tooltip-text">
-              <div>hello</div>
-            </div>
+             </div>
             <img class="i" src="/img/question-mark.png" alt="" width="50px">
           </div>
           <a href="" class="v1">رافقني</a>
