--- a/html/optionsVisitor.html
+++ b/html/optionsVisitor.html
@@ -14,30 +14,32 @@
 <body>
   <section>
     <div class="img">
-      <img src="/img/undraw_web_browsing_p-77-h-1.svg" alt="" width="400px">
+      <img src="../img/undraw_web_browsing_p-77-h-1.svg" alt="" width="400px">
     </div>
     <div class="option">
       <div class="title">
         فضلا اختر الخيار المناسب
       </div>
-      <div class="option-button">
         <div class="option-one">
           <div class="tooltip">
-            <div id="tooltip-text">
+            <div class="tooltip-text">
+              <div class="top">ماهي خدمة ارشدني؟</div>
+              <div>هي خدمة تسهم بمساعدة ذوي الهمم عن طريق إرشادهم إلى أقرب مصاعد للمكتب المطلوب دون الحاجة لإستخدام الدرج أو أيه طرق تصعب على ذوي الهمم استخدامها</div>
              </div>
-            <img class="i" src="/img/question-mark.png" alt="" width="50px">
+            <img class="i" src="../img/question-mark.png" alt="" width="50px">
           </div>
-          <a href="" class="v1">أرشدني</a>
+          <a class="v1">أرشدني</a>
         </div>
         <div class="option-one">
-          <div class="tooltip down">
-            <div id="tooltip-text">
+          <div class="tooltip">
+            <div class="tooltip-text down">
+              <div class="top">ماهي خدمة رافقني؟</div>
+              <div>هي خدمة تسهم بمساعدة لذوي الهمم عن طريق إرسال من يرغم بالمساهمة بمساعدتهم لمرافقة المستخدم ليصل إلى المكتب عند الحاجة لذلك</div>
              </div>
-            <img class="i" src="/img/question-mark.png" alt="" width="50px">
+            <img class="i" src="../img/question-mark.png" alt="" width="50px">
           </div>
-          <a href="" class="v1">رافقني</a>
+          <a class="v1">رافقني</a>
         </div>
-      </div>
     </div>
   </section>
 </body>
