--- a/html/who.html
+++ b/html/who.html
@@ -40,6 +40,7 @@
         </a>
        </div>
     </div>
+    <img src="../img/welcome.jpeg" class="img-welcome">
     </section>
   </body>
 </html>
