--- a/html/dontHelp.html
+++ b/html/dontHelp.html
@@ -16,7 +16,7 @@
   <section>
     <div class="img">
       <img src="../img/undraw_search_engines_ij7q.svg" alt="" width="300px">
-    </div>
+     </div>
     <div class="option">
       <select name="choose-teacher" id="">
         <option value="">اختر القسم</option>
@@ -29,8 +29,16 @@
       <input class="search" type="text" name="" id="" placeholder="أدخل أسم الدكتور">
     </div>
     <div class="btn">
-      <a href="">! أبحث </a>
-    </div>
+      <a >! أبحث </a>
+     </div>
+     <section class="newsec">
+         <a href="FAQ.html">
+          <button class="faqimg">
+            <img src="../img/faq.png" alt="" class="faqimg">
+          </button>
+        </a>
+      </section>
+     
   </section>
 </body>
 </html>
