--- a/html/menu.html
+++ b/html/menu.html
@@ -46,9 +46,13 @@
         <div class="line"><span class="title">او زورونا عبر</span></div>
       </div>
       <div class="icons">
-        <a href="https://twitter.com/CCIS_IMAMU?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa-brands fa-twitter"></i></a>
-        <a href="us.html"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://twitter.com/CCIS_IMAMU?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="us.html">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://crm.imamu.edu.sa/"><i class="fa-solid fa-envelope"></i></a>
       </div>
     </div>
   </section>
