--- a/html/us.html
+++ b/html/us.html
@@ -32,15 +32,14 @@
   .main-img{
     display: ruby-base-container;
   margin: 45 55 44 44 auto;
-  margin-left: 15%;
+  margin-left: 95px;
   margin-top:7%;
-  width:250px
+  width:200px
   }
   .page {
     width: 390px;
     height: 844px;
-    background: rgb(253, 251, 251);
-     opacity: 1;
+    opacity: 1;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -51,21 +50,21 @@
     width: 242px;
     color: rgba(70, 147, 153, 1);
     position: absolute;
-    top: 504px;
-    left: 122px;
+    top: 424px;
+    left: 132px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-family: Outfit;
     font-weight: Medium;
     font-size: 32px;
     opacity: 1;
     text-align: left;
-  }
+   }
   .desc {
     width: 387px;
-    color: rgb(69, 66, 66);
+    color: rgb(88, 86, 86);
     position: absolute;
-    top: 590px;
-    left: 4px;
+    top: 500px;
+    left: 7px;
     font-family: Outfit;
     font-weight: Medium;
     font-size: 24px;
@@ -74,9 +73,9 @@
   }
   .desc2{
     width: 387px;
-    color: rgb(69, 66, 66);
+    color: rgb(88, 86, 86);  
     position: absolute;
-    top: 740px;
+    top: 650px;
     left: 4px;
     font-family: Outfit;
     font-weight: Medium;
